--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
    <div class="content">
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost begge dager, fredag-søndag; 2500 NOK </p>
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p>
-    <p class="text-acc">Ønsker du å booke rom, ta kontakt med bruden innen 1. mai.</p> <br>
+    <p class="text-acc"><b>Ønsker du å booke rom, ta kontakt med bruden innen 1. mai.</p> </b><br>
 
     <p class="text-acc">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
     <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
-    <p class="text-acc">Látið okkur vita fyrir 1. maí hvort þið viljið bóka herbergi og þá hversu margar nætur.</p>
+    <p class="text-acc"><b>Látið okkur vita fyrir 1. maí hvort þið viljið bóka herbergi og þá hversu margar nætur.</b>
     </div>
   </div>
 
-    <div class="contentBx">
+    <!-- <div class="contentBx">
       <div class="label">Info about Koppang</div>
       <div class="content">
         <p class="text-acc">Stor-Elvdal hotell ligger i hjertet av Koppang i Østerdalen der vi bodde 2020-2022. Koppang er et vakkert, bortgjemt sted. Hit er det like enkelt å komme seg med bil som med tog. Husk at regnes som miljøvennlig med dieseltog, og en risikerer heller ikke promillikontroll. Koppang stasjon ligger kun 100 meter fra hotellet så risikoen for å gå seg vill er liten. For de som kommer med bil er det kostnadsfri parkering ved hotellet. Det er det for øvrig også ved Felleskjøpet, butikken og i stort sett resten av kommunen. Reiser dere med tog er det lurt å bestille billetter i god tid inne på www.vy.no ettersom det er begrenset antall plasser på toget mellom Hamar og Koppang. </p><br>
@@ -116,7 +116,7 @@
           Til að bóka lestarmiða er einfaldast að fara inn á www.vy.no og bóka miða. Þau ykkar sem komið með flugi til Gardermoen bókið lestarmiða báðar leiðir Gardermoen – Koppang Stasjon. Það er skynsamlegt að bóka lestarmiða tímanlega þar sem það er takmarkað pláss í lestinni milli Hamar og Koppang.
         </p>
       </div>
-    </div>
+    </div> -->
     
 
     <!-- <div class="contentBx">
