--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <section class="hero">
     <div class ="headertext">
      
-      <h1 class="hero-text2">Ragnhild +</h1>
-      <h1 class="hero-text2">Thor</h1>
-      <h3 class="hero-text1">12 August</h3>
-      <h3 class="hero-text1">Koppang, Norge</h3>
+      <h1 class="hero-text1">Vi gifter oss!</h1>
+      <h1 class="hero-text2">Ragnhild + Thor</h1>
+      <!-- <h1 class="hero-text2">Thor</h1> -->
+      <h3 class="hero-text3">12 August</h3>
+      <h3 class="hero-text3">Koppang, Norge</h3>
     </div>
     </section>
   </header>
@@ -27,7 +28,7 @@
   <div class="textbox">
     <!-- <img class="needle" src="./Images/needle1.svg" /> -->
    <div class="box">
-    <h2>Vi gifter oss!</h2><br>
+    <!-- <h2>Vi gifter oss!</h2><br> -->
     <h4>Vi ønsker å invitere til bryllup på Koppang i Østerdalen den 12. august 2023</h5><br>
       <p class="invitation-text">Bryllupet finner sted på Stor-Elvdal hotell i Koppang sentrum, med vielse klokken 13:00.</p>
       <p class="invitation-text">For de som velger å gjøre en helg ut av det samles vi for en hyggelig kveld fredagen. Da blir det mulighet for å bli litt kjent, det blir gjester fra fire land så her får alle anledning til å skjerpe språkferdighetene i trygge omgivelser.</p>
@@ -37,7 +38,7 @@
     </div> 
 
    <div class="box">
-    <h2>Brúðkaup!</h2><br>
+    <!-- <h2>Brúðkaup!</h2><br> -->
     <h4>Við bjóðum til brúðkaups og tilheyrandi veislu í Koppang í Østerdalen þann 12. ágúst 2023</h5><br>
       <p class="invitation-text">Veisluhöldin fara fram á Stor-Elvdal hotell í Koppang og hefjast með vígslu klukkan 13:00. Enginn verður dreginn inn í kirkju þennan daginn.</p>
       <p class="invitation-text">Fyrir þau ykkar sem hyggjast gera helg úr herlegheitunum munum við hefja átökin þegar á föstudagskvöldinu. Þar gefst færi á að hitta bæði okkur og aðra gesti, og slípa saman mannskapinn svo síður leiði til slagsmála á sjálfan brúðkaupsdaginn. Það er viðbúið að meðal gesta verði allra þjóða kvikindi, svo nú gefst loksins færi á að reyna sig í norsku, sænsku, dönsku og ensku í tryggu umhverfi.</p>
@@ -49,9 +50,17 @@
 
   <!-- Images -->
   <div class="image-section">
-    <img class="image1" src="./Images/shoes.jpg" alt="show">
+    <!-- <img class="image1" src="./Images/shoes.jpg" alt="show">
     <img class="image2" src="./Images/light.jpg" alt="light">
-    <img class="image2" src="./Images/flower.jpg" alt="flower">
+    <img class="image2" src="./Images/flower.jpg" alt="flower"> -->
+    <img class="image1" src="./Images/krans.jpg" alt="show">
+    <img class="image2" src="./Images/skylt.jpg" alt="light">
+    <!-- <img class="image2" src="./Images/lampor.jpg" alt="flower"> -->
+  </div>
+  <div class="image-section">
+   
+    <img class="image2" src="./Images/lampor.jpg" alt="flower">
+    <img class="image2" src="./Images/beer.jpg" alt="flower">
   </div>
 
   <!-- Signup form -->
