--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <img class="image2" src="./Images/skylt.jpg" alt="light">
     <!-- <img class="image2" src="./Images/lampor.jpg" alt="flower"> -->
   </div>
-  <div class="image-section">
+  <!-- <div class="image-section">
    
     <img class="image2" src="./Images/lampor.jpg" alt="flower">
     <img class="image2" src="./Images/beer.jpg" alt="flower">
-  </div>
+  </div> -->
 
   <!-- Signup form -->
 
