--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <img class="needle" src="./Images/needle1.svg" /> -->
    <div class="box">
     <!-- <h2>Vi gifter oss!</h2><br> -->
-    <h4>Vi ønsker å invitere til bryllup på Koppang i Østerdalen den 12. august 2023</h5><br>
+    <h3>Vi ønsker å invitere til bryllup på Koppang i Østerdalen den 12. august 2023</h3><br>
       <p class="invitation-text">Bryllupet finner sted på Stor-Elvdal hotell i Koppang sentrum, med vielse klokken 13:00.</p>
       <p class="invitation-text">For de som velger å gjøre en helg ut av det samles vi for en hyggelig kveld fredagen. Da blir det mulighet for å bli litt kjent, det blir gjester fra fire land så her får alle anledning til å skjerpe språkferdighetene i trygge omgivelser.</p>
       <p class="invitation-text">Mer informasjon om selve dagen kommer etter hvert. Brudgommen sørger i hvert fall for at bruden får champagne til frokost slik at vi alle får en uhøytidelig og festlig dag.</p>
@@ -39,7 +39,7 @@
 
    <div class="box">
     <!-- <h2>Brúðkaup!</h2><br> -->
-    <h4>Við bjóðum til brúðkaups og tilheyrandi veislu í Koppang í Østerdalen þann 12. ágúst 2023</h5><br>
+    <h3>Við bjóðum til brúðkaups og tilheyrandi veislu í Koppang í Østerdalen þann 12. ágúst 2023</h3><br>
       <p class="invitation-text">Veisluhöldin fara fram á Stor-Elvdal hotell í Koppang og hefjast með vígslu klukkan 13:00. Enginn verður dreginn inn í kirkju þennan daginn.</p>
       <p class="invitation-text">Fyrir þau ykkar sem hyggjast gera helg úr herlegheitunum munum við hefja átökin þegar á föstudagskvöldinu. Þar gefst færi á að hitta bæði okkur og aðra gesti, og slípa saman mannskapinn svo síður leiði til slagsmála á sjálfan brúðkaupsdaginn. Það er viðbúið að meðal gesta verði allra þjóða kvikindi, svo nú gefst loksins færi á að reyna sig í norsku, sænsku, dönsku og ensku í tryggu umhverfi.</p>
       <p class="invitation-text">Frekari upplýsingar um dagskrá dagsins kemur síðar. Brúðguminn mun í öllu falli sjá til þess að brúðurin fái kampavín með morgunmatnum, svo við öll getum notið dagsins og veisluhaldanna með afslöppuðum hætti.</p>
@@ -105,15 +105,17 @@
    <div class="content">
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost begge dager, fredag-søndag; 2500 NOK </p>
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p>
-    <p class="text-acc"><b>Ønsker du å booke rom, ta kontakt med bruden innen 1. mai.</p> </b><br>
+    <p class="text-acc1"><b>Ønsker du å booke rom, ta kontakt med bruden innen 1. mai.</p> </b><br>
 
     <p class="text-acc">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
     <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
-    <p class="text-acc"><b>Látið okkur vita fyrir 1. maí hvort þið viljið bóka herbergi og þá hversu margar nætur.</b>
+    <p class="text-acc1"><b>Látið okkur vita fyrir 1. maí hvort þið viljið bóka herbergi og þá hversu margar nætur.</b>
     </div>
   </div>
+
+  
 
     <!-- <div class="contentBx">
       <div class="label">Info about Koppang</div>
