--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="hero-text1">Vi gifter oss!</h1>
       <h1 class="hero-text2">Ragnhild + Thor</h1>
       <!-- <h1 class="hero-text2">Thor</h1> -->
-      <h3 class="hero-text3">12 August</h3>
+      <h3 class="hero-text3">12 august</h3>
       <h3 class="hero-text3">Koppang, Norge</h3>
     </div>
     </section>
@@ -105,13 +105,14 @@
    <div class="content">
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost begge dager, fredag-søndag; 2500 NOK </p>
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p>
-    <p class="text-acc1"><b>Ønsker du å booke rom, ta kontakt med bruden innen 1. mai.</p> </b><br>
+    <p class="text-acc1"><b>Ønsker du å booke rom, ta kontakt med bruden innen 1. mai. </p> </b><br> 
 
     <p class="text-acc">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
     <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
     <p class="text-acc1"><b>Látið okkur vita fyrir 1. maí hvort þið viljið bóka herbergi og þá hversu margar nætur.</b>
+      <!-- <a href = "mailto: ragnhildvedum@gmail.com">Send Email</a> -->
     </div>
   </div>
 
