--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class ="headertext">
      
       <h1 class="hero-text1">Vi gifter oss!</h1>
-      <h1 class="hero-text2">Ragnhild + Thor</h1>
+      <h1 class="hero-text2">Ragnhild + Þór</h1>
       <!-- <h1 class="hero-text2">Thor</h1> -->
       <h3 class="hero-text3">12 august</h3>
       <h3 class="hero-text3">Koppang, Norge</h3>
