--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="hero-text1">Vi gifter oss!</h1>
       <h1 class="hero-text2">Ragnhild + Þór</h1>
       <h3 class="hero-text3">12 august 2023</h3>
-      <h3 class="hero-text3">Koppang, Norge</h3>
+      <h3 class="hero-text3">Koppang</h3>
     </div>
     </section>
   </header>
@@ -66,7 +66,7 @@
     <p class="text-acc">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p> <br>
 
     <p class="text-acc">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
-    <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
+    <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p><br>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
     <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
 
