--- a/index.html
+++ b/index.html
@@ -62,50 +62,30 @@
       <h1 class="accordion-name">Praktisk information</h1>
     <div class="label">Overnatting / Gisting</div>
    <div class="content">
-    <p class="text-acc">Dobbeltrom på hotellet inkludert frokost begge dager, fredag-søndag; 2500 NOK </p>
-    <p class="text-acc">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p> <br>
+    <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost begge dager, fredag-søndag; 2500 NOK </p>
+    <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br>
 
-    <p class="text-acc">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
-    <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p><br>
-    <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
-    <p class="text-acc">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
+    <p class="text-acc1">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
+    <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
+    <p class="text-ac1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
+    <p class="text-acc1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
 
     </div>
   </div>
-
-  
-
-    <!-- <div class="contentBx">
-      <div class="label">Info about Koppang</div>
+    <div class="contentBx">
+      <div class="label">Reisevei / Leiðarlýsing</div>
       <div class="content">
-        <p class="text-acc">Stor-Elvdal hotell ligger i hjertet av Koppang i Østerdalen der vi bodde 2020-2022. Koppang er et vakkert, bortgjemt sted. Hit er det like enkelt å komme seg med bil som med tog. Husk at regnes som miljøvennlig med dieseltog, og en risikerer heller ikke promillikontroll. Koppang stasjon ligger kun 100 meter fra hotellet så risikoen for å gå seg vill er liten. For de som kommer med bil er det kostnadsfri parkering ved hotellet. Det er det for øvrig også ved Felleskjøpet, butikken og i stort sett resten av kommunen. Reiser dere med tog er det lurt å bestille billetter i god tid inne på www.vy.no ettersom det er begrenset antall plasser på toget mellom Hamar og Koppang. </p><br>
+        <p class="text-acc">Stor-Elvdal hotell ligger i hjertet av Koppang i Østerdalen der vi bodde 2020-2022. Koppang er et vakkert, bortgjemt sted. Hit er det like enkelt å komme seg med bil som med tog. Husk at regnes som miljøvennlig med dieseltog, og en risikerer heller ikke promillikontroll. Koppang stasjon ligger kun 100 meter fra hotellet så risikoen for å gå seg vill er liten. For de som kommer med bil er det kostnadsfri parkering ved hotellet. 
+          Det er det for øvrig også ved Felleskjøpet, butikken og i stort sett resten av kommunen. Reiser dere med tog er det lurt å bestille billetter i god tid inne på <a href="www.vy.no">vy.no</a> ettersom det er begrenset antall plasser på toget mellom Hamar og Koppang. </p><br>
        
         <p class="text-acc">Stor-Elvdal hotell liggur í hjarta Koppang hvar við bjuggum 2020-2022. Kaupstaðurinn er lítill en ljómandi fallegur. Þangað er einfalt að koma sér með bæði lest og bíl. Frá Oslo eða flugstöðinni Gardermoen er tekin lest til Hamar og þar er skipt um lest til Koppang stasjon. Óttist eigi, við skiptin þarf einungis að stíga frá borði, ganga undir lestarsporið og upp hinum megin og bíða í 10-20 mínútur áður en stigið er um borð að nýju.
-          Munið að það þykir sérlega umhverfisvænt að ferðast með dísillestum, og enginn er látinn blása áður en stigið er um borð. Koppang stasjon er 100 metra frá hótelinu og lítil hætta á að villast á leiðinni. Fyrir þau ykkar sem koma með bíl er frítt að leggja við hótelið, kaupfélagið, búðina eða eiginlega hvar sem er.
-          Til að bóka lestarmiða er einfaldast að fara inn á www.vy.no og bóka miða. Þau ykkar sem komið með flugi til Gardermoen bókið lestarmiða báðar leiðir Gardermoen – Koppang Stasjon. Það er skynsamlegt að bóka lestarmiða tímanlega þar sem það er takmarkað pláss í lestinni milli Hamar og Koppang.
+        </p>
+        <p class="text-acc">Munið að það þykir sérlega umhverfisvænt að ferðast með dísillestum, og enginn er látinn blása áður en stigið er um borð. Koppang stasjon er 100 metra frá hótelinu og lítil hætta á að villast á leiðinni. Fyrir þau ykkar sem koma með bíl er frítt að leggja við hótelið, kaupfélagið, búðina eða eiginlega hvar sem er.
+        </p>
+        <p class="text-acc">Til að bóka lestarmiða er einfaldast að fara inn á <a href="www.vy.no">vy.no</a> og bóka miða. Þau ykkar sem komið með flugi til Gardermoen bókið lestarmiða báðar leiðir Gardermoen – Koppang Stasjon. Það er skynsamlegt að bóka lestarmiða tímanlega þar sem það er takmarkað pláss í lestinni milli Hamar og Koppang.
         </p>
       </div>
-    </div> -->
-    
-
-    <!-- <div class="contentBx">
-      <div class="label">Do you have parking? Will I have to pay to park?</div>
-      <div class="content">
-        <p><b>Gi beskjed om du kan være med å feire dagen vår innen 1. mai 2023. </b> Har du allergier eller andre behov trenger vi skriftlig redegjørelse i 3 (tre) kopier med legerelærling, som kanskje blir vurdert. Ta kontakt med brud eller brudgom.</p>
-        <p>   <b>Verið svo væn að gefa okkur svar fyrir 1. maí 2023 hvort þið eigið heimangengt. </b>  Sértu af þeim toga að búa við matarofnæmi eða aðra kvilla sem bera þarf í huga, skal fyrir sama frest skilað inn skriflegri skýrslu í þríriti með lýsingu á vandamálinu ásamt læknisvottorði. Kvillarnir verða kannski teknir til skoðunar. Hafið samband við brúðina eða brúðgumann hvað þetta varðar.
-        </p>
-      </div>
-    </div> -->
-
-
-    <!-- <div class="contentBx">
-      <div class="label">How can I stay connected with the Loveless Cafe?</div>
-      <div class="content">
-        <p>Sign up for our emails, follow us on Facebook, Instagram, Twitter, and Pinterest, and show us your Loveless
-          Cafe memories with #MyLoveless or send us an email.</p>
-      </div>
-    </div>
-  </div> -->
+    </div> 
 
 </section>
 
