--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
 
   <div class="textbox">
    <div class="box">
-    <h3>Vi ønsker å invitere til bryllup på Koppang i Østerdalen den 12. august 2023</h3><br>
-      <p class="invitation-text">Bryllupet finner sted på Stor-Elvdal hotell i Koppang sentrum, med vielse klokken 13:00.</p>
-      <p class="invitation-text">For de som velger å gjøre en helg ut av det samles vi for en hyggelig kveld fredagen. Da blir det mulighet for å bli litt kjent, det blir gjester fra fire land så her får alle anledning til å skjerpe språkferdighetene i trygge omgivelser.</p>
-      <p class="invitation-text1">Gi beskjed om du kan være med å feire dagen vår, og om du ønsker overnatting, innen 1. mai 2023. </p>
-      <p class="invitation-text"> Priser finner du under. Har du allergier eller andre behov trenger vi skriftlig redegjørelse i 3 (tre) kopier med legerelærling, som kanskje blir vurdert. Ta kontakt med brud eller brudgom.</p>
-      <p class="invitation-text">Mer informasjon kommer etter hvert. Brudgommen sørger i hvert fall for at bruden får champagne til frokost slik at vi alle får en uhøytidelig og festlig dag.</p>
+    <h3>Velkommen til bryllup på Koppang i Østerdalen den 12. august 2023</h3><br>
+      <p class="invitation-text">Bryllupet nærmer seg og finner fortsatt sted på Stor-Elvdal hotell i Koppang sentrum, med vielse på hotell tunet klokken 13:00.</p>
+      <p class="invitation-text">For de som velger å gjøre en helg ut av det samles vi fra kl. 18.00 for en hyggelig kveld på hotellets pub fredagen. Det blir både quiz og mulighet for å bli litt kjent, det kommer gjester fra hele Norden så her får alle anledning til å skjerpe språkferdighetene i nogen lunde trygge omgivelser. Vi står for litt å bite i, og baren er åpen til 22.00.</p>
+      <!-- <p class="invitation-text1">Gi beskjed om du kan være med å feire dagen vår, og om du ønsker overnatting, innen 1. mai 2023. </p> -->
+      <p class="invitation-text">Praktisk informasjon om alt dere måtte lure på finner dere lenger ned.</p>
+      <!-- <p class="invitation-text">Mer informasjon kommer etter hvert. Brudgommen sørger i hvert fall for at bruden får champagne til frokost slik at vi alle får en uhøytidelig og festlig dag.</p> -->
       <p class="invitation-text2">Vi gleder oss stort til å feire med dere!</p>
    
     </div> 
 
    <div class="box">
-    <h3>Við bjóðum til brúðkaups og tilheyrandi veislu í Koppang í Østerdalen þann 12. ágúst 2023</h3><br>
-      <p class="invitation-text">Veisluhöldin fara fram á Stor-Elvdal hotell í Koppang og hefjast með vígslu klukkan 13:00. Enginn verður dreginn inn í kirkju þennan daginn.</p>
-      <p class="invitation-text">Fyrir þau ykkar sem hyggjast gera helg úr herlegheitunum munum við hefja átökin þegar á föstudagskvöldinu. Þar gefst færi á að hitta bæði okkur og aðra gesti, og slípa saman mannskapinn svo síður leiði til slagsmála á sjálfan brúðkaupsdaginn. Það er viðbúið að meðal gesta verði allra þjóða kvikindi, svo nú gefst loksins færi á að reyna sig í norsku, sænsku, dönsku og ensku í tryggu umhverfi.</p>
-      <p class="invitation-text1">Verið svo væn að gefa okkur svar fyrir 1. maí 2023 hvort þið getið komið, og hvort þið viljið bóka herbergi á hótelinu. </p>
-      <p class="invitation-text"> Verð finnið þið hér neðar.Sértu af þeim toga að búa við matarofnæmi eða aðra kvilla sem bera þarf í huga, skal fyrir sama frest skilað inn skriflegri skýrslu í þríriti með lýsingu á vandamálinu ásamt læknisvottorði. Kvillarnir verða kannski teknir til skoðunar. Hafið samband við brúðina eða brúðgumann hvað þetta varðar.</p>
-      <p class="invitation-text">Frekari upplýsingar um dagskrá dagsins kemur síðar. Brúðguminn mun í öllu falli sjá til þess að brúðurin fái kampavín með morgunmatnum, svo við öll getum notið dagsins og veisluhaldanna með afslöppuðum hætti.</p>
-      <p class="invitation-text2">Við hlökkum til að sjá ykkur og halda veislu!</p>
+    <h3>Velkomin í brúðkaup í Koppang í Østerdalen 12. Ágúst</h3>
+    <h3>2023</h3>
+    <br>
+      <p class="invitation-text">Brúðkaupið nálgast og verður haldið eftir áætlun á Stor-Elvdal hotell í Koppang. Vígsla fer fram klukkan 13:00.</p>
+      <!-- <p class="invitation-text1">Verið svo væn að gefa okkur svar fyrir 1. maí 2023 hvort þið getið komið, og hvort þið viljið bóka herbergi á hótelinu. </p> -->
+      <p class="invitation-text">Fyrir þau ykkar sem gera helg úr herlegheitunum er mæting föstudag 18:00 á pöbbinum á hótelinu. Það verður quiz og góðir möguleikar á að hitta fólk og hafa gaman. Boðið verður upp á kennslu í sænsku, dönsku, norsku, ensku og íslensku. Við græjum eitthvað að éta, barinn lokar svo 22:00 svo allir mæti á laugardeginum.</p>
+      <p class="invitation-text">Hagnýtar upplýsingar um allt annað finnast neðar á síðunni.</p>
+      <p class="invitation-text2">Hlökkum til að sjá ykkur!</p>
    </div> 
 
     </div>
@@ -62,16 +63,32 @@
       <h1 class="accordion-name">Praktisk information</h1>
     <div class="label">Overnatting / Gisting</div>
    <div class="content">
-    <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost begge dager, fredag-søndag; 2500 NOK </p>
-    <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br>
-
-    <p class="text-acc1">Þar sem flestir koma langt að höfum við búið svo um hnúta að gestir geti búið á hótelinu þessa helgina. </p>
-    <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
-    <p class="text-ac1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
-    <p class="text-acc1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
+    <p class="text-acc1">Gratis parkering utenfor hotellet. Sen utsjekk søndagen kl. 15.00. Overnatting betales på stedet. Rommene er bestilt i deres navn.</p>
+    <!-- <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br> -->
+<br>
+    <p class="text-acc1">Frítt að leggja utan við hótelið. Tékkát 15:00 á sunnudeginum. Gisting gerð upp við brottför, herbergin eru bókuð í ykkar nafni.</p>
+    <!-- <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p> -->
+    <!-- <p class="text-ac1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p> -->
+    <!-- <p class="text-acc1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p> -->
 
     </div>
   </div>
+  <div class="contentBx">
+    <div class="label">Dagen i korte trekk / Dagurinn í aðalatriðum:</div>
+    <div class="content">
+      <p class="text-acc">13.00 Vielse på tunet / Vígsla á hótelinu</p> 
+      <p class="text-acc">14.00 Mingling på tunet / Kurteisisspjall og pjatt</p>
+      <p class="text-acc">16.00 Middag i Barfrøstua / Kvöldverður</p>
+        <p class="text-acc">19.00 Kake og kaffe i Barfrøstua / Kökur og kaffi</p>
+    <p class="text-acc">20.00 PARTY på Ladden Pub / Dansleikur á pöbbnum</p>
+      <p class="text-acc">03.00 Takk og hei / Lok, lok og læs</p>
+      <br>
+      <p class="text-acc">Hele dagen vill foregå i hotellets fasiliteter.</p>
+      <br>
+      <p class="text-acc">Allt saman fer frem á hótelinu.</p>
+    </div>
+  </div> 
+  
     <div class="contentBx">
       <div class="label">Reisevei / Leiðarlýsing</div>
       <div class="content">
@@ -86,8 +103,53 @@
         </p>
       </div>
     </div> 
+    <div class="accordion">
+      <div class="contentBx">
+        <h1 class="accordion-name">Annen info</h1>
+      <div class="label">Gaver / Gjafir</div>
+     <div class="content">
+      <p class="text-acc1">Nei takk, vi ønsker oss at dere kommer og bidrar til å gjøre dagen vår unik og fantastisk.</p>
+  <br>
+      <p class="text-acc1">Gjafir afþakkaðar, okkur nægir að njóta nærveru ykkar.</p>
+  
+      </div>
+    </div>
+    <div class="contentBx">
+      <div class="label">Bekledning / Klæðnaður</div>
+      <div class="content">
+        <p class="text-acc">Det blir et avslappet sommerbryllup så kle deg der etter. Hadde brudgommen fått velge hadde det blitt fjøsdress og støvler. (Men det fikk han heldigvis ikke….) ! Hotellets utearealer består stort sett av plen og grus så de høyeste hælene kan nok med hell bli hjemme.</p> 
+        <br>
+        <p class="text-acc">Við erum sultuslök á klæðnaði. Ef veður verður gott verðum við vonandi úti yfir daginn og þar er gras og möl. Mælum með háustu hælunum af þeim sökum.</p>
+
+      </div>
+    </div> 
+    
+      <div class="contentBx">
+        <div class="label">Toastmastere</div>
+        <div class="content">
+          <p class="text-acc">Hildi, brudgommens søster. Behersker Islandsk og Dansk. Kan nås på 0045 26 99 13 19 eller Facebook Hildigunnur Kàradòttir.</p>
+         
+          <p class="text-acc">Eva-Karin (EK), brudens nære venninne, behersker Svensk og Norsk, kan nås på 0046 73 554 61 96 eller Facebook Eva-Karin Bystrôm.
+          </p>
+          <br>
+          <p class="text-acc">Hildigunnur, systir Þórs. Afspyrnu viðskotaill og óþarfi að hafa samband við hana varðandi nokkurn hlut sem brúðgumanum viðkemur.
+          </p>
+          <p class="text-acc">Eva-Karin er sænsk og getur lítið að því gert, en upplagt að hafa samband við hana til að segja sögur af skammarstrikum brúðarinnar.
+          </p>
+        </div>
+      </div> 
+      <div class="contentBx">
+        <div class="label">Beliggenhet / Þjónusta á staðnum</div>
+        <div class="content">
+          <p class="text-acc">Koppang er ikke verdens navle, men det er både matbutikk og apotek vegg i vegg med hotellet. Det er også masse nydelige småturer i området med gangavstand fra hotellet for de som måtte ønske å strekke litt på bena i løpet av helgen.</p><br>
+          <p class="text-acc">Koppang hefur upp á að bjóða allar helstu nauðsynjar, svo sem matvörubúð, apótek, bókasafn, göngustíga, skotvopnabúð, ríkið og læknamóttöku. Einnig höggorma, elg og úlfa ef vel viðrar.
+          </p>
+
+        </div>
+      </div> 
 
 </section>
+
 
 <div class="image-section2">
   <img class="image3" src="./Images/wedding.jpg" alt="show">
