--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="contentBx">
-    <div class="label">Dagen i korte trekk / Dagurinn í aðalatriðum:</div>
+    <div class="label">Dagen i korte trekk / Dagurinn í aðalatriðum</div>
     <div class="content">
       <p class="text-acc">13.00 Vielse på tunet / Vígsla á hótelinu</p> 
       <p class="text-acc">14.00 Mingling på tunet / Kurteisisspjall og pjatt</p>
