--- a/vscode/index2.html
+++ b/vscode/index2.html
@@ -1,34 +1,47 @@
-<section class="form-image-wrapper">
-    <!-- Accordion -->
-
 <div class="accordion">
   <div class="contentBx">
     <h1 class="accordion-name">Praktisk information</h1>
   <div class="label">Overnatting / Gisting</div>
  <div class="content">
+  <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br>
   <p class="text-acc1">Gratis parkering utenfor hotellet. Sen utsjekk søndagen kl. 15.00. Overnatting betales på stedet. Rommene er bestilt i deres navn.</p>
-  <!-- <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br> -->
-
+  <br>
+  <p class="text-acc1">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p>
+  <br>
+  <p class="text-acc1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p>
+  <br>
+  <p class="text-acc1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p>
+  <br>
   <p class="text-acc1">Frítt að leggja utan við hótelið. Tékkát 15:00 á sunnudeginum. Gisting gerð upp við brottför, herbergin eru bókuð í ykkar nafni.</p>
-  <!-- <p class="text-acc">Hefjiå sparnaðinn þegar í dag, Noregur er næstum jafn dýr og Ísland.</p> -->
-  <!-- <p class="text-ac1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 2 nætur föstudag-sunnudag; 2500 NOK </p> -->
-  <!-- <p class="text-acc1">Eitt herbergi fyrir tvo með morgunverði á hótelinu 1 nótt laugardag-sunnudag; 1250 NOK </p> -->
 
   </div>
-  <div class="accordion">
-    <div class="contentBx">
-      <!-- <h1 class="accordion-name">Praktisk information</h1> -->
-    <div class="label">Dagen i korte trekk / Dagurinn í aðalatriðum:</div>
-   <div class="content">
-    <p class="text-acc1">13.00 Vielse på tunet / Vígsla á hótelinu</p> 
-    <p class="text-acc1">14.00 Mingling på tunet / Kurteisisspjall og pjatt</p>
-    <p class="text-acc1">16.00 Middag i Barfrøstua / Kvöldverður</p>
-    <p class="text-acc1">19.00 Kake og kaffe i Barfrøstua / Kökur og kaffi</p>
-    <p class="text-acc1">20.00 PARTY på Ladden Pub / Dansleikur á pöbbnum</p>
-    <p class="text-acc1">03.00 Takk og hei / Lok, lok og læs</p>
-
-    </div>
 </div>
+<div class="contentBx">
+  <div class="label">Dagen i korte trekk / Dagurinn í aðalatriðum</div>
+  <div class="content">
+    <p class="text-acc">13.00 Vielse på tunet / Vígsla á hótelinu</p> 
+    <p class="text-acc">14.00 Mingling på tunet / Kurteisisspjall og pjatt</p>
+    <p class="text-acc">16.00 Middag i Barfrøstua / Kvöldverður</p>
+      <p class="text-acc">19.00 Kake og kaffe i Barfrøstua / Kökur og kaffi</p>
+  <p class="text-acc">20.00 PARTY på Ladden Pub / Dansleikur á pöbbnum</p>
+    <p class="text-acc">03.00 Takk og hei / Lok, lok og læs</p>
+    <br>
+    <p class="text-acc">Hele dagen vill foregå i hotellets fasiliteter.</p>
+    <br>
+    <p class="text-acc">Allt saman fer frem á hótelinu.</p>
+  </div>
+</div> 
+<div class="contentBx">
+  <div class="label">Bekledning / Klæðnaður</div>
+  <div class="content">
+    <p class="text-acc">Det blir et avslappet sommerbryllup så kle deg der etter. Hadde brudgommen fått velge hadde det blitt fjøsdress og støvler. (Men det fikk han heldigvis ikke….) ! Hotellets utearealer består stort sett av plen og grus så de høyeste hælene kan nok med hell bli hjemme.</p> 
+    <br>
+    <p class="text-acc">Við erum sultuslök á klæðnaði. Ef veður verður gott verðum við vonandi úti yfir daginn og þar er gras og möl. Mælum með háustu hælunum af þeim sökum.</p>
+
+  </div>
+</div> 
+
+
   <div class="contentBx">
     <div class="label">Reisevei / Leiðarlýsing</div>
     <div class="content">
@@ -43,5 +56,56 @@
       </p>
     </div>
   </div> 
+  <div class="contentBx">
+    <div class="label">Beliggenhet / Þjónusta á staðnum</div>
+    <div class="content">
+      <p class="text-acc">Koppang er ikke verdens navle, men det er både matbutikk og apotek vegg i vegg med hotellet. Det er også masse nydelige småturer i området med gangavstand fra hotellet for de som måtte ønske å strekke litt på bena i løpet av helgen.</p><br>
+      <p class="text-acc">Koppang hefur upp á að bjóða allar helstu nauðsynjar, svo sem matvörubúð, apótek, bókasafn, göngustíga, skotvopnabúð, ríkið og læknamóttöku. Einnig höggorma, elg og úlfa ef vel viðrar.
+      </p>
 
-</section>
+    </div>
+  
+  <!-- <div class="accordion">
+    <div class="contentBx">
+       <h1 class="accordion-name">Annen info</h1> -->
+    <div class="label">Gaver / Gjafir</div>
+   <div class="content">
+    <p class="text-acc1">Nei takk, vi ønsker oss at dere kommer og bidrar til å gjøre dagen vår unik og fantastisk.</p>
+<br>
+    <p class="text-acc1">Gjafir afþakkaðar, okkur nægir að njóta nærveru ykkar.</p>
+
+    </div>
+  </div> -->
+  <div class="contentBx">
+    <div class="label">Bekledning / Klæðnaður</div>
+    <div class="content">
+      <p class="text-acc">Det blir et avslappet sommerbryllup så kle deg der etter. Hadde brudgommen fått velge hadde det blitt fjøsdress og støvler. (Men det fikk han heldigvis ikke….) ! Hotellets utearealer består stort sett av plen og grus så de høyeste hælene kan nok med hell bli hjemme.</p> 
+      <br>
+      <p class="text-acc">Við erum sultuslök á klæðnaði. Ef veður verður gott verðum við vonandi úti yfir daginn og þar er gras og möl. Mælum með háustu hælunum af þeim sökum.</p>
+
+    </div>
+  </div> 
+  
+    <div class="contentBx">
+      <div class="label">Toastmastere</div>
+      <div class="content">
+        <p class="text-acc">Hildi, brudgommens søster. Behersker Islandsk og Dansk. Kan nås på 0045 26 99 13 19 eller Facebook Hildigunnur Kàradòttir.</p>
+       
+        <p class="text-acc">Eva-Karin (EK), brudens nære venninne, behersker Svensk og Norsk, kan nås på 0046 73 554 61 96 eller Facebook Eva-Karin Bystrôm.
+        </p>
+        <br>
+        <p class="text-acc">Hildigunnur, systir Þórs. Afspyrnu viðskotaill og óþarfi að hafa samband við hana varðandi nokkurn hlut sem brúðgumanum viðkemur.
+        </p>
+        <p class="text-acc">Eva-Karin er sænsk og getur lítið að því gert, en upplagt að hafa samband við hana til að segja sögur af skammarstrikum brúðarinnar.
+        </p>
+      </div> -->
+    <!-- </div> 
+    <div class="contentBx">
+      <div class="label">Beliggenhet / Þjónusta á staðnum</div>
+      <div class="content">
+        <p class="text-acc">Koppang er ikke verdens navle, men det er både matbutikk og apotek vegg i vegg med hotellet. Det er også masse nydelige småturer i området med gangavstand fra hotellet for de som måtte ønske å strekke litt på bena i løpet av helgen.</p><br>
+        <p class="text-acc">Koppang hefur upp á að bjóða allar helstu nauðsynjar, svo sem matvörubúð, apótek, bókasafn, göngustíga, skotvopnabúð, ríkið og læknamóttöku. Einnig höggorma, elg og úlfa ef vel viðrar.
+        </p>
+
+      </div>
+    </div>   -->
