--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
   <div class="contentBx">
     <div class="label">Overnatting / Gisting</div>
     <div class="content">
-     <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br>
+      <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, fredag-søndag; 2500 NOK</p><br>
+      <p class="text-acc1">Dobbeltrom på hotellet inkludert frokost, lørdag-søndag; 1250 NOK</p><br>
      <p class="text-acc1">Gratis parkering utenfor hotellet. Sen utsjekk søndagen kl. 15.00. Overnatting betales på stedet. Rommene er bestilt i deres navn.</p>
      <br>
      <br>
