--- a/index.html
+++ b/index.html
@@ -73,14 +73,19 @@
   <div class="contentBx">
     <div class="label">Toastmastere</div>
       <div class="content">
-        <p class="text-acc">Hildi, brudgommens søster. Behersker Islandsk og Dansk. Kan nås på 0045 26 99 13 19 eller Facebook Hildigunnur Kàradòttir.</p>
+        <p class="text-acc">Hildi, brudgommens søster. Behersker Islandsk og Dansk. Kan nås på 0045 26 99 13 19, hildi.karadottir@gmail.com eller Facebook Hildigunnur Kàradòttir.</p>
        
-        <p class="text-acc">Eva-Karin (EK), brudens nære venninne, behersker Svensk og Norsk, kan nås på 0046 73 554 61 96 eller Facebook Eva-Karin Bystrôm.
+        <p class="text-acc">Eva-Karin (EK), brudens nære venninne, behersker Svensk og Norsk, kan nås på 0046 73 554 61 96, evakarin.bystrom@gmail.com eller Facebook Eva-Karin Bystrôm.
+        </p>
+        <p class="text-acc">Om noen ønsker å si noen ord eller lignende må toastmastere få info om dette innen 15. Juli.
         </p>
         <br>
         <p class="text-acc">Hildigunnur, systir Þórs. Afspyrnu viðskotaill og óþarfi að hafa samband við hana varðandi nokkurn hlut sem brúðgumanum viðkemur.
         </p>
         <p class="text-acc">Eva-Karin er sænsk og getur lítið að því gert, en upplagt að hafa samband við hana til að segja sögur af skammarstrikum brúðarinnar.
+        </p>
+        <p class="text-acc">Vilji fólk halda ræðu, tölu eða kyrja vísur undir borðhaldi skulu veislustýrurnar aðvaraðar eigi síður en 15. júlí. (evakarin.bystrom@gmail.com / hildi.karadottir@gmail.com)
+
         </p>
       </div>
   </div> 
